gitTestProject/src/objects/Purchase_Order__c.object
<CustomObject>
    <fields>
        <fullName>Grand_Total__c</fullName>
        <formula>Total_Bill__c  +  Quote__r.Tax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Quote.OpportunityId</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Bill__c</fullName>
        <label>Total Bill</label>
        <summarizedField>Quote_Purchase__c.Total_Price__c</summarizedField>
        <summaryForeignKey>Quote_Purchase__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Purchase Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Purchase Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>